[gd_scene load_steps=33 format=3 uid="uid://d103jy5tatdjc"]

[ext_resource type="Script" path="res://Scripts/mainScene.gd" id="1_be53e"]
[ext_resource type="Texture2D" uid="uid://daia1xjss3g6m" path="res://Assets/char1.png" id="2_bdix7"]
[ext_resource type="Texture2D" uid="uid://dyxgauf8fcy3b" path="res://Assets/kartseyyarnig.png" id="2_miyxu"]
[ext_resource type="Texture2D" uid="uid://xrs1j1m6or1" path="res://Assets/char1siyah.png" id="3_jsyai"]
[ext_resource type="Texture2D" uid="uid://5e0vic54trkt" path="res://Assets/kartAGA.png" id="3_kfmp8"]
[ext_resource type="Texture2D" uid="uid://opyovrrhniog" path="res://Assets/AGAgolge.png" id="3_rn44u"]
[ext_resource type="Texture2D" uid="uid://rh4j5cgrm2ws" path="res://Assets/kadin1golge.png" id="4_7mkfp"]
[ext_resource type="Texture2D" uid="uid://c2jjlpanyfhcb" path="res://Assets/kartane.png" id="4_nu1q8"]
[ext_resource type="Texture2D" uid="uid://dkqychmxxi8gp" path="res://Assets/main/bgnebileyim.png" id="5_gf8b6"]
[ext_resource type="PackedScene" uid="uid://cfevcosht37o1" path="res://Scenes/randomDocumentCreator.tscn" id="6_ia81n"]
[ext_resource type="Texture2D" uid="uid://b1eqdv04s77a7" path="res://Assets/AGA.png" id="6_nvx6m"]
[ext_resource type="Texture2D" uid="uid://dgigxeni82w4g" path="res://Assets/kadin1.png" id="7_b34ul"]
[ext_resource type="Texture2D" uid="uid://coq4s88ya2bkk" path="res://Assets/main/game scenenew.png" id="11_6a5yo"]
[ext_resource type="Texture2D" uid="uid://b2n6x3c7h65yg" path="res://Assets/letterclosed.png" id="12_x44oc"]
[ext_resource type="Texture2D" uid="uid://de5m36573ia0m" path="res://Assets/letteropen.png" id="13_yr5vt"]
[ext_resource type="Texture2D" uid="uid://b5233usxqc6ye" path="res://Assets/main/greenbutton1.png" id="14_qoiya"]
[ext_resource type="AudioStream" uid="uid://chv2cp73hokd4" path="res://Assets/Sounds/gameprogress.mp3" id="15_3hjxa"]
[ext_resource type="Texture2D" uid="uid://dxv5hufx0tqw4" path="res://Assets/main/greenbutton2.png" id="15_j2hpe"]
[ext_resource type="AudioStream" uid="uid://bs3ntnldxsjwl" path="res://Assets/Sounds/paperOnay.mp3" id="16_d3ner"]
[ext_resource type="Texture2D" uid="uid://cynae2viqclg4" path="res://Assets/main/redbutton1.png" id="16_il3xj"]
[ext_resource type="Texture2D" uid="uid://ccemglwq02b55" path="res://Assets/main/redbutton2.png" id="17_2cg1q"]
[ext_resource type="AudioStream" uid="uid://b3vuo0qiylpcl" path="res://Assets/Sounds/paperRed.mp3" id="17_m3t4w"]

[sub_resource type="Animation" id="Animation_oqder"]
resource_name = "char1Gelis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char1Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-230, 700), Vector2(942, 519)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersPainted/Char1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char1Siyah:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(6, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersUnPainted/Char1Siyah:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_hykqo"]
resource_name = "char1OnayliGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char1Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(942, 519), Vector2(2150, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersPainted/Char1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char1Siyah:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersUnPainted/Char1Siyah:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_lmn0o"]
resource_name = "char1RedGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char1Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(942, 519), Vector2(-230, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersPainted/Char1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char1Siyah:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersUnPainted/Char1Siyah:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_h612o"]
resource_name = "char2Gelis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char2Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-230, 700), Vector2(910, 510)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char2Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(6, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char2Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_7ulay"]
resource_name = "char2OnayliGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char2Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(910, 510), Vector2(2150, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char2Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char2Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_01o8j"]
resource_name = "char2RedGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char2Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(910, 510), Vector2(-230, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char2Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char2Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_ba5id"]
resource_name = "char3Gelis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char3Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-230, 700), Vector2(917, 537)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char3Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(6, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char3Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4h4dc"]
resource_name = "char3OnayliGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char3Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(917, 537), Vector2(2150, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char3Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char3Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_3p0u6"]
resource_name = "char3RedGidis"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharactersUnPainted/Char3Siyah:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(917, 537), Vector2(-230, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharactersUnPainted/Char3Siyah:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharactersUnPainted/Char3Siyah:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharactersPainted/Char3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6bry"]
_data = {
"char1Gelis": SubResource("Animation_oqder"),
"char1OnayliGidis": SubResource("Animation_hykqo"),
"char1RedGidis": SubResource("Animation_lmn0o"),
"char2Gelis": SubResource("Animation_h612o"),
"char2OnayliGidis": SubResource("Animation_7ulay"),
"char2RedGidis": SubResource("Animation_01o8j"),
"char3Gelis": SubResource("Animation_ba5id"),
"char3OnayliGidis": SubResource("Animation_4h4dc"),
"char3RedGidis": SubResource("Animation_3p0u6")
}

[node name="MainScene" type="Node2D"]
script = ExtResource("1_be53e")
IDCardTextureArray = Array[Texture]([ExtResource("2_miyxu"), ExtResource("3_kfmp8"), ExtResource("4_nu1q8")])

[node name="bg2" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("5_gf8b6")

[node name="characters" type="Node2D" parent="."]

[node name="CharactersUnPainted" type="Node2D" parent="characters"]

[node name="Char1Siyah" type="Sprite2D" parent="characters/CharactersUnPainted"]
position = Vector2(-230, 700)
scale = Vector2(4, 4)
texture = ExtResource("3_jsyai")

[node name="Char2Siyah" type="Sprite2D" parent="characters/CharactersUnPainted"]
position = Vector2(-230, 700)
scale = Vector2(4, 4)
texture = ExtResource("3_rn44u")

[node name="Char3Siyah" type="Sprite2D" parent="characters/CharactersUnPainted"]
position = Vector2(-230, 700)
scale = Vector2(4, 4)
texture = ExtResource("4_7mkfp")

[node name="CharactersPainted" type="Node2D" parent="characters"]

[node name="Char1" type="Sprite2D" parent="characters/CharactersPainted"]
visible = false
position = Vector2(942, 519)
scale = Vector2(6, 6)
texture = ExtResource("2_bdix7")

[node name="Char2" type="Sprite2D" parent="characters/CharactersPainted"]
visible = false
position = Vector2(910, 510)
scale = Vector2(6, 6)
texture = ExtResource("6_nvx6m")

[node name="Char3" type="Sprite2D" parent="characters/CharactersPainted"]
visible = false
position = Vector2(917, 537)
scale = Vector2(6, 6)
texture = ExtResource("7_b34ul")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="bg1" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("11_6a5yo")

[node name="AltHealthBar" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1726.0
offset_top = 84.0
offset_right = 1875.0
offset_bottom = 740.0
scale = Vector2(0.138991, 0.138991)

[node name="TextureRect" type="TextureRect" parent="Control/AltHealthBar"]
layout_mode = 2
texture = ExtResource("12_x44oc")

[node name="TextureRect2" type="TextureRect" parent="Control/AltHealthBar"]
layout_mode = 2
texture = ExtResource("12_x44oc")

[node name="TextureRect3" type="TextureRect" parent="Control/AltHealthBar"]
layout_mode = 2
texture = ExtResource("12_x44oc")

[node name="TextureRect4" type="TextureRect" parent="Control/AltHealthBar"]
layout_mode = 2
texture = ExtResource("12_x44oc")

[node name="TextureRect5" type="TextureRect" parent="Control/AltHealthBar"]
layout_mode = 2
texture = ExtResource("12_x44oc")

[node name="HealthBar" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1726.0
offset_top = 78.0
offset_right = 3006.0
offset_bottom = 6494.0
scale = Vector2(0.139167, 0.139167)

[node name="TextureRect" type="TextureRect" parent="Control/HealthBar"]
layout_mode = 2
texture = ExtResource("13_yr5vt")

[node name="TextureRect2" type="TextureRect" parent="Control/HealthBar"]
layout_mode = 2
texture = ExtResource("13_yr5vt")

[node name="TextureRect3" type="TextureRect" parent="Control/HealthBar"]
layout_mode = 2
texture = ExtResource("13_yr5vt")

[node name="TextureRect4" type="TextureRect" parent="Control/HealthBar"]
layout_mode = 2
texture = ExtResource("13_yr5vt")

[node name="TextureRect5" type="TextureRect" parent="Control/HealthBar"]
layout_mode = 2
texture = ExtResource("13_yr5vt")

[node name="RedButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 847.0
offset_top = 771.0
offset_right = 872.0
offset_bottom = 799.0
scale = Vector2(4.99996, 4.99996)
texture_normal = ExtResource("16_il3xj")
texture_pressed = ExtResource("17_2cg1q")

[node name="OnayButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 538.0
offset_top = 773.0
offset_right = 563.0
offset_bottom = 801.0
scale = Vector2(5.02105, 5.02105)
texture_normal = ExtResource("14_qoiya")
texture_pressed = ExtResource("15_j2hpe")

[node name="randomDocumentCreator" parent="." instance=ExtResource("6_ia81n")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../characters")
libraries = {
"": SubResource("AnimationLibrary_j6bry")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("15_3hjxa")

[node name="onaySesi" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("16_d3ner")
volume_db = 3.0

[node name="redSesi" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("17_m3t4w")
volume_db = 2.0

[connection signal="pressed" from="Control/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="Control/OnayButton" to="." method="_on_onay_button_pressed"]
